--- a/loyo2.html
+++ b/loyo2.html
@@ -31,28 +31,28 @@
 </nav>
 
   
-  <!--I tried to make the square but We must use spefic word as seen below-->
+  I tried to make the square but We must use spefic word as seen below
   
   
   
   
-<!--<nav aria-label="Page navigation example">-->
-<!--  <ul class="pagination">-->
-<!--<li class="page-item">-->
-<!--<a class="page-link" href="#" aria-label="Previous">-->
-<!--  <span aria-hidden="true">&laquo;</span>-->
-<!--   </a>-->
-<!-- </li>-->
-<!--<li class="page-item"><a class="page-link" href="https://www.amazon.com/">Amazon</a></li>-->
-<!-- <li class="page-item"><a class="page-link" href="https://www.youtube.com/">Youtube</a></li>-->
-<!-- <li class="page-item"><a class="page-link" href="https://www.google.com/">Google</a></li>-->
-<!--<li class="page-item">-->
-<!-- <a class="page-link" href="#" aria-label="Next">-->
-<!-- <span aria-hidden="true">&raquo;</span>-->
-<!--  </a>-->
-<!--  </li>-->
-<!--</ul>-->
-<!--</nav>-->
+<nav aria-label="Page navigation example">
+  <ul class="pagination">
+<li class="page-item">
+<a class="page-link" href="#" aria-label="Previous">
+  <span aria-hidden="true">&laquo;</span>
+   </a>
+ </li>
+<li class="page-item"><a class="page-link" href="https://www.amazon.com/">Amazon</a></li>
+ <li class="page-item"><a class="page-link" href="https://www.youtube.com/">Youtube</a></li>
+ <li class="page-item"><a class="page-link" href="https://www.google.com/">Google</a></li>
+<li class="page-item">
+ <a class="page-link" href="#" aria-label="Next">
+ <span aria-hidden="true">&raquo;</span>
+  </a>
+  </li>
+</ul>
+</nav>
 
 
 
